--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,9 @@
     "angular-sanitize": "1.2.15",
     "angular-route": "1.2.6",
     "socket.io-client": "~0.9.16",
-    "angular-animate": "~1.2.11"
+    "angular-animate": "~1.2.11",
+    "angular-bootstrap": "~0.11.0",
+    "bootstrap": "~3.1.1"
   },
   "devDependencies": {
     "angular-mocks": "1.2.6",
