--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "launch_tracker",
   "version": "0.0.0",
   "dependencies": {
+    "coffee-script": "~1.6.3",
     "express": "~3.4.3",
     "lodash": "~2.4.1",
     "mongoose": "~3.5.5",
