--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "launch_tracker",
   "version": "0.0.0",
   "dependencies": {
+    "bower": "0.6.x",
     "coffee-script": "~1.6.3",
     "express": "~3.4.3",
     "lodash": "~2.4.1",
@@ -81,6 +82,7 @@
     "node": ">=0.10.0"
   },
   "scripts": {
-    "test": "grunt test"
+    "test": "grunt test",
+    "postinstall": "./node_modules/bower/bin/bower install"
   }
 }
