change bower version

--- a/package.json
+++ b/package.json
@@ -2,26 +2,26 @@
   "name": "launch_tracker",
   "version": "0.0.0",
   "dependencies": {
-    "bower": "0.6.x",
+    "bower": "1.3.3",
+    "cheerio": "~0.13.1",
     "coffee-script": "~1.6.3",
+    "connect": "~2.12.0",
+    "connect-mongo": "~0.4.0",
+    "connect-redis": "~1.4.6",
+    "cookie": "~0.1.0",
+    "ejs": "~0.8.4",
     "express": "~3.4.3",
+    "hiredis": "~0.1.16",
     "lodash": "~2.4.1",
     "mongoose": "~3.5.5",
     "mongoose-unique-validator": "~0.3.0",
-    "connect-mongo": "~0.4.0",
-    "passport": "latest",
-    "passport-local": "latest",
-    "ejs": "~0.8.4",
-    "passport-vkontakte": "~0.2.1",
-    "passport-facebook": "~1.0.2",
-    "connect-redis": "~1.4.6",
-    "redis": "~0.10.0",
-    "hiredis": "~0.1.16",
-    "socket.io": "~0.9.16",
-    "cookie": "~0.1.0",
-    "cheerio": "~0.13.1",
     "natural": "~0.1.25",
-    "connect": "~2.12.0"
+    "passport": "latest",
+    "passport-facebook": "~1.0.2",
+    "passport-local": "latest",
+    "passport-vkontakte": "~0.2.1",
+    "redis": "~0.10.0",
+    "socket.io": "~0.9.16"
   },
   "devDependencies": {
     "coffee-script": "~1.6.3",
